--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
             bottom: 20px;
             right: 20px;
             z-index: 9999;
+            max-width: 100%; 
+            right: 0px; 
+            max-height: 100%;
         }
 
         .widget-button {
