defferent memory for sessions

--- a/templates/index.html
+++ b/templates/index.html
@@ -328,7 +328,7 @@
                 </div>
                 <div class="chatbox-input">
                     <div class="input-wrapper">
-                        <input type="text" id="user-input" placeholder="Type a message...">
+                        <input type="text" id="user-input" placeholder="Ask a question...">
                         <button id="send-button">Send</button>
                     </div>
                 </div>
