--- a/templates/index.html
+++ b/templates/index.html
@@ -550,6 +550,11 @@
             });
         }
 
+        document.getElementById('refresh').addEventListener('click', function() {
+            // Refresh the page
+            location.reload();
+        });
+
     </script>
     
 </body>
