--- a/templates/login.html
+++ b/templates/login.html
@@ -2,54 +2,7 @@
 <html>
 <head>
   <title>Login</title>
-  <style>
-    body {
-      background-color: #f2f2f2;
-      font-family: Arial, sans-serif;
-    }
-    
-    form {
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-      padding: 20px;
-      width: 400px;
-      margin: 50px auto;
-      padding-right: 30px;
-    }
-    
-    label {
-      display: block;
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    
-    input[type="text"], input[type="password"] {
-      border: none;
-      border-radius: 5px;
-      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-      padding: 10px;
-      width: 100%;
-      margin-bottom: 20px;
-      margin-right: 10px;
-    }
-    
-    button[type="submit"] {
-      background-color: #4CAF50;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-      padding: 10px 20px;
-    }
-    
-    button[type="submit"]:hover {
-      background-color: #3e8e41;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 <body>
 
