--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,7 +13,7 @@
         .widget-button {
             width: 100px;
             height: 100px;
-            background-image: url('https://images-platform.99static.com/4VNlmbLPzOCSHP8RB4bAwwohd0g=/0x0:1024x1024/500x500/top/smart/99designs-contests-attachments/91/91577/attachment_91577988');
+            background-image: url('/static/images/chatboticon.png');
             background-size: cover;
             transition: transform 0.2s ease-in-out;
         }
