--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,14 @@
                 <div class="chatbox-header">
                     <span class="chatbox-title">
                         <div class="chatbox-icon">
-                            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5d/Indiana_University_seal.svg/1200px-Indiana_University_seal.svg.png" alt="HR Assistant" width="150" height="150">
+                            <img src="{{ url_for('static', filename='images/Indiana_University_seal.png') }}" alt="HR Assistant" width="150" height="150">
                         </div>
                         <div class="chatbox-top">HR Assistant</div> 
                     </span>
                     <div class="chatbox-close">
-                        <button id="refresh">refresh</button>
+                        <div id="refresh">
+                            <img src="{{ url_for('static', filename='images/refresh.png') }}" alt="Refresh" width="20" height="20">
+                        </div>
                     </div>
                     <div class="chatbox-close" id="chatbox-close">X</div>
                 </div>
