--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -68,7 +68,10 @@ table {
     border-collapse: collapse;
 }
 th, td {
-    padding: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
     border: 1px solid #ccc;
     text-align: left;
 }
@@ -113,6 +116,18 @@ section {
     display: none;
     text-align: left;
     padding: 20px 0;
+    align-items: center;
+}
+
+.bin{
+    color: red;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+}
+.bin-container{
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
