--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,11 +17,12 @@
             <div id="form-content">
                 <div class="upload-area" id="upload-area">
                     <label for="file" class="upload-label">Drag and drop files here or click to choose a file:</label>
-                    <input type="file" id="file" name="file" required multiple onchange="document.getElementById('file-label').innerHTML = this.files.length + ' file(s) selected';">
+                    <input type="file" id="file" name="file" required multiple onchange="updateFileSizeAndCount();">
                     <label for="file" id="file-label">Choose file(s)</label>
                 </div>
                 <div id="file-list"></div>
                 <input type="submit" value="Upload">
+                <div id="trash-can">Drop files here to delete</div>
             </div>
             
             <div id="loading">
@@ -47,9 +48,11 @@
                         <td>{{ document.id }}</td>
                         <td>{{ document.name }}</td>
                         <td>
+                            <div class="bin-container">
                             <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                                <input type="submit" value="Delete">
+                                <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
                             </form>
+                        </div>
                         </td>
                     </tr>
                 {% endfor %}
