--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -16,15 +16,38 @@ h1 {
     font-size: 36px;
 }
 h2 {
-    margin: 20px 0 10px;
+    text-align: center;
+    margin: 60px;
     font-size: 24px;
+}
+h3 {
+    margin: 40px 0 20px 0;
+    font-size: 20px;
+    color: #555555;
 }
 .form {
     margin: 20px;
-    padding: 20px;
+    padding: 40px;
+    padding-top: 2px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin-top: 100px;
+    font-family: Tahoma;
+}
+
+/* .uploading {
+    margin: 20px;
+    padding: 20px;
+    padding-top: 2px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+} */
+.click-text {
+    color: rgb(0, 132, 255);
+    text-decoration: underline;
+    cursor: pointer;
 }
 label {
     display: block;
@@ -43,7 +66,7 @@ input[type=file] {
     transition: background-color 0.3s ease-in-out;
 }
 .upload-area:hover {
-    background-color: #e0e0e0;
+    background-color: #ccdaf5;
 }
 input[type=submit] {
     display: block;
@@ -56,7 +79,7 @@ input[type=submit] {
     cursor: pointer;
 }
 input[type=submit]:hover {
-    background-color: #555;
+    background-color: #555555;
 }
 table {
     margin: 20px;
@@ -91,10 +114,11 @@ section {
 }
 
 #file-list div {
-    background-color: #e0e0e0;
+    background-color: #fff;
+    border: 1px solid #ccc;
     margin-bottom: 5px;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 #file-list button {
@@ -125,6 +149,7 @@ section {
     width: 20px;
     height: 20px;
 }
+
 .bin-container{
     display: flex;
     justify-content: center;
