--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,29 +6,33 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css') }}">
 </head>
 <body>
-    <header>
-        <h1>Admin Panel</h1>
-    </header>
+    <div>
   
     <!-- Upload form -->
     <section>
-        <h2>Upload Document</h2>
-        <form class="form" action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
+        
+        
+        <form class="form" class="form_1" action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
+            <h2>Upload Documents</h2>
             <div id="form-content">
                 <div class="upload-area" id="upload-area">
-                    <label for="file" class="upload-label">Drag and drop files here or click to choose a file:</label>
+                    <img src="{{ url_for('static', filename='images/cloud-upload.png') }}" height="200" width="200" alt="Upload">
+                    <label class="upload-label">Drag and drop files here or <span class="click-text" id="click-text">click</span> to choose a file:</label>
                     <input type="file" id="file" name="file" required multiple onchange="updateFileSizeAndCount();">
-                    <label for="file" id="file-label">Choose file(s)</label>
+                    <label id="file-label">Choose file(s)</label>
                 </div>
-                <div id="file-list"></div>
-                <input type="submit" value="Upload">
+                <div id="uploading">
+                    <h3>Uploading</h3>
+                    <div id="file-list"></div>     
+                    <input type="submit" value="Upload">
+                </div>
             </div>
             
             <div id="loading">
                 <div class="loader"></div>
                 <p>Uploading...</p>
             </div>
-        </form>        
+        </form>   
     </section>
 
     <section>
@@ -58,6 +62,8 @@
             </tbody>
         </table>
     </section>
+    
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+    </div>
 </body>
 </html>
