--- a/templates/admin.html
+++ b/templates/admin.html
@@ -35,21 +35,28 @@
         </form>   
     </section>
 
-    <section>
+    <section >
+        <div class="file-list">
         <h2>Existing Documents</h2>
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th></th>
                     <th>Name</th>
-                    <th>Delete</th>
+                    <th>Size</th>
+                    <th>Date added</th>
+                    <th>Admin</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 {% for document in documents %}
                     <tr>
-                        <td>{{ document.id }}</td>
+                        <td><img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon"></td>
                         <td>{{ document.name }}</td>
+                        <td class="sub-column">{{ document.size }} Mb</td>
+                        <td class="sub-column">{{ document.date_added }}</td>
+                        <td class="sub-column">{{ document.admin }}</td>
                         <td>
                             <div class="bin-container">
                             <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
@@ -61,6 +68,7 @@
                 {% endfor %}
             </tbody>
         </table>
+    </div>
     </section>
     
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
