--- a/templates/admin.html
+++ b/templates/admin.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             
-            <div id="loading">
+            <div id="loading" class="loader-div">
                 <div class="loader"></div>
                 <p>Uploading...</p>
             </div>
