--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -68,6 +68,10 @@ input[type=file] {
 .upload-area:hover {
     background-color: #ccdaf5;
 }
+#upload-area.dragover {
+    background-color: #ccdaf5;
+    border: 2px dashed #840000;
+}
 input[type=submit] {
     display: block;
     margin-top: 10px;
@@ -132,9 +136,22 @@ section {
     border: 5px solid #f3f3f3;
     border-top: 5px solid #3498db; 
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 120px;
+    height: 120px;
     animation: spin 1s linear infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader-div {
+    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 #loading {
