hide and unhide upload area

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -143,6 +143,9 @@ section {
     justify-content: center;
     align-items: center;
 }
+#uploading {
+    display: none;
+}
 .loader-div {
     display: none;
     display: flex;
