--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -18,7 +18,7 @@ h1 {
 h2 {
     text-align: center;
     margin: 50px;
-    font-size: 24px;
+    font-size: 28px;
 }
 h3 {
     margin: 40px 0 20px 0;
@@ -30,7 +30,7 @@ h3 {
     padding: 40px;
     padding-top: 2px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 2px solid #c1c1c1;
     border-radius: 5px;
     margin-top: 100px;
     font-family: Tahoma;
@@ -41,7 +41,7 @@ h3 {
     padding: 20px;
     padding-top: 2px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 2px solid #c1c1c1;
     border-radius: 5px;
 }
 .click-text {
