--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -184,6 +184,9 @@ section {
     align-items: center;
     gap: 10px;
 }
+#filename {
+    margin: 5px;
+}
 #filelist {
     margin-top: 20px;
     display:none;
@@ -197,8 +200,8 @@ section {
     border: 1px solid #a3a3a3;
     border-radius: 5px;
 }
-.left{
-    margin-left: 400px;
+#fileitem:hover{
+    background-color: #e0e0e0;
 }
 .file-list {
     margin: 20px;
